--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <base href="." />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -24,7 +25,25 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Accion Talent Search</title>
+    <script>
+      const forceSlashAfterHash = () => {
+        let _hash = window.location.hash;
+
+        if (_hash[1] && _hash[1] != "/") {
+          window.location.href =
+            window.location.origin +
+            window.location.pathname +
+            window.location.search +
+            "#/" +
+            _hash.slice(1);
+        }
+      };
+
+      forceSlashAfterHash();
+
+      window.addEventListener("hashchange", forceSlashAfterHash);
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
